# confect

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  release.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: index.md  package.json
docs/.vitepress/: config.ts
docs/advanced/: encryption.md  multi-host.md  systemd.md
docs/commands/: add.md  category.md  diff.md  info.md  init.md  pull.md  remove.md  restore.md  status.md  sync.md
docs/guide/: categories.md  configuration.md  installation.md  quick-start.md
src/: error.rs  lib.rs  main.rs
src/cli/: args.rs  mod.rs
src/cli/commands/: add.rs  category.rs  diff.rs  info.rs  init.rs  mod.rs  remove.rs  restore.rs  self_update.rs  status.rs  sync.rs
src/core/: category.rs  config.rs  mod.rs  repository.rs
src/crypto/: age.rs  mod.rs
src/fs/: metadata.rs  mod.rs  tracker.rs
src/git/: mod.rs
