[package]
name = "confect"
version = "1.1.2"
edition = "2021"
rust-version = "1.75"
description = "CLI tool for managing system configuration files with Git"
license = "MIT"
repository = "https://github.com/ursul/confect"
homepage = "https://ursul.github.io/confect"
documentation = "https://ursul.github.io/confect"
readme = "README.md"
keywords = ["config", "git", "backup", "dotfiles", "sysadmin"]
categories = ["command-line-utilities", "config"]

[dependencies]
# CLI
clap = { version = "4.4", features = ["derive", "env"] }
dialoguer = "0.11"
console = "0.15"

# Git
git2 = { version = "0.18", features = ["ssh", "https", "vendored-openssl"] }

# Crypto
age = { version = "0.10", features = ["armor"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

# Filesystem
walkdir = "2.4"
glob = "0.3"
dirs = "5.0"

# Unix
nix = { version = "0.27", features = ["user", "fs"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Utils
hostname = "0.4"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.9"

[profile.release]
lto = true
strip = true
